test/compile_errors/err_issue181_unsafe_prefix_call.w
//! expect-error: unsafe prefix requires a raw pointer dereference or raw pointer index

fn foo -> i32:
    1

fn main:
    let y = unsafe foo()
    y
